--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TX'
 - !lcsh 'Cooking, American -- Juvenile literature'
+- GITenberg
 title: The Mary Frances Cook Book; Or, Adventures Among the Kitchen People
 url: http://www.gutenberg.org/ebooks/38215
